Continue localization support for hardware patches

--- a/oclp_mod/languages/en_US.json
+++ b/oclp_mod/languages/en_US.json
@@ -362,5 +362,24 @@
     "remove_patches":"Remove installed patch",
     "checking_new_patches":"Checking if new patches are needed",
     "patch_not_installed":"- Patch {patch} not installed",
-    "no_new_patches_detected":"No new patches detected that need installation"
+    "no_new_patches_detected":"No new patches detected that need installation",
+    "kdk_no_direct_match":"No direct match found for {host_build}, falling back to closest match",
+    "kdk_found_direct_match":"Found direct match for {host_build} ({host_version})",
+    "kdk_missing_pkg_receipt":"{kdk_name} missing pkg receipt, falling back to legacy validation",
+    "kdk_corrupted_missing_file":"Found corrupted KDK ({kdk_name}), removing due to missing file: {file}",
+    "kdk_corrupted_missing_kext":"Found corrupted KDK, removing due to missing: {kdk_path}/System/Library/Extensions/{kext}",
+    "kdk_recommended_title":"Recommended KDK is as follows:",
+    "kdk_build_version":"- KDK Build Version: {build}",
+    "kdk_version":"- KDK Version: {version}",
+    "kdk_url":"- KDK URL: {url}",
+    "hw_variant_graphics":"Graphics",
+    "hw_variant_networking":"Networking",
+    "hw_variant_audio":"Audio",
+    "hw_variant_miscellaneous":"Miscellaneous",
+    "wireless_intel_bcm_dual":"Intel/BCM Dual Wireless",
+    "wireless_intel":"Intel Wireless",
+    "wireless_bcm":"BCM Wireless",
+    "wireless_unknown":"Unknown Wireless",
+    "audio_patch":"Audio Patch",
+    "wireless_extended":"Extended"
 }
