--- a/oclp_mod/languages/zh_CN.json
+++ b/oclp_mod/languages/zh_CN.json
@@ -362,5 +362,24 @@
     "remove_patches":"删除已安装的补丁",
     "checking_new_patches":"检查是否需要新的补丁",
     "patch_not_installed":"- 补丁 {patch} 没有安装",
-    "no_new_patches_detected":"没有检测到新的补丁需要安装"
+    "no_new_patches_detected":"没有检测到新的补丁需要安装",
+    "kdk_no_direct_match":"未找到 {host_build} 的直接匹配，回退到最接近的匹配",
+    "kdk_found_direct_match":"找到 {host_build} ({host_version}) 的直接匹配",
+    "kdk_missing_pkg_receipt":"{kdk_name}缺少pkg收据，回退到旧版验证",
+    "kdk_corrupted_missing_file":"发现损坏的KDK ({kdk_name})，由于缺少文件: {file} 而删除",
+    "kdk_corrupted_missing_kext":"发现损坏的KDK，由于缺少: {kdk_path}/System/Library/Extensions/{kext} 而删除",
+    "kdk_recommended_title":"推荐的 KDK 如下:",
+    "kdk_build_version":"- KDK 构建版本: {build}",
+    "kdk_version":"- KDK 版本: {version}",
+    "kdk_url":"- KDK URL: {url}",
+    "hw_variant_graphics":"显卡",
+    "hw_variant_networking":"网卡",
+    "hw_variant_audio":"音频",
+    "hw_variant_miscellaneous":"杂项",
+    "wireless_intel_bcm_dual":"Intel/BCM双网卡",
+    "wireless_intel":"Intel无线网卡",
+    "wireless_bcm":"BCM无线网卡",
+    "wireless_unknown":"未知无线网卡",
+    "audio_patch":"音频补丁",
+    "wireless_extended":"补充内容"
 }
