Add localization for KDK and network patch log messages

--- a/oclp_mod/languages/en_US.json
+++ b/oclp_mod/languages/en_US.json
@@ -372,6 +372,18 @@
     "kdk_build_version":"- KDK Build Version: {build}",
     "kdk_version":"- KDK Version: {version}",
     "kdk_url":"- KDK URL: {url}",
+    "kdk_unable_to_get_list":"Unable to get KDK list, falling back to local KDK matching",
+    "kdk_checking_loose_match":"Checking loosely matched KDK {loose_version}",
+    "kdk_checking_match":"Checking matched KDK {older_version}",
+    "kdk_not_found_manual_install":"Unable to find matching KDK for {host_version} or {older_version}, please manually install one",
+    "kdk_found_match":"Found matching KDK: {kdk_name}",
+    "kdk_monterey_or_earlier":"macOS Monterey or earlier does not require KDK",
+    "kdk_already_installed":"KDK already installed ({kdk_name}), skipping",
+    "kdk_api_contact_failed":"Unable to contact KdkSupportPkg API, and no matching KDK for {host_version} ({host_build}) or {older_version} is installed.\nPlease ensure you have a network connection or manually install a KDK.",
+    "network_missing_check_patches":"Network connection missing, checking if network patches are applicable",
+    "network_patches_already_applied":"Network patches already applied, network connection required",
+    "network_patches_not_applicable":"Network patches not applicable, network connection required",
+    "network_patches_applicable":"Network patches applicable, removing other patches",
     "hw_variant_graphics":"Graphics",
     "hw_variant_networking":"Networking",
     "hw_variant_audio":"Audio",
