--- a/oclp_mod/languages/zh_CN.json
+++ b/oclp_mod/languages/zh_CN.json
@@ -372,6 +372,18 @@
     "kdk_build_version":"- KDK 构建版本: {build}",
     "kdk_version":"- KDK 版本: {version}",
     "kdk_url":"- KDK URL: {url}",
+    "kdk_unable_to_get_list":"无法获取 KDK 列表，回退到本地 KDK 匹配",
+    "kdk_checking_loose_match":"检查松散匹配的 KDK {loose_version}",
+    "kdk_checking_match":"检查匹配的 KDK {older_version}",
+    "kdk_not_found_manual_install":"找不到匹配 {host_version} 或 {older_version} 的 KDK，请手动安装一个",
+    "kdk_found_match":"找到匹配的 KDK: {kdk_name}",
+    "kdk_monterey_or_earlier":"macOS Monterey 或更早版本不需要 KDK",
+    "kdk_already_installed":"KDK 已安装 ({kdk_name})，跳过",
+    "kdk_api_contact_failed":"无法联系 KdkSupportPkg API，并且没有安装匹配 {host_version} ({host_build}) 或 {older_version} 的 KDK。\n请确保您有网络连接或手动安装一个 KDK.",
+    "network_missing_check_patches":"网络连接缺失，检查是否适用网络补丁",
+    "network_patches_already_applied":"网络补丁已应用，需要网络连接",
+    "network_patches_not_applicable":"网络补丁不适用，需要网络连接",
+    "network_patches_applicable":"网络补丁适用，移除其他补丁",
     "hw_variant_graphics":"显卡",
     "hw_variant_networking":"网卡",
     "hw_variant_audio":"音频",
