Refactor language handler and minor UI/text updates

--- a/oclp_mod/languages/en_US.json
+++ b/oclp_mod/languages/en_US.json
@@ -281,7 +281,7 @@
     "support_for_dynamic_color": "Support for dynamic color changes. Note:\nThis setting is still experimental. If you\nencounter any issues, please disable\nthis setting.",
     "Note:May_use_more_CPU_resources.": "Note: May use more CPU resources.",
     "Control_window_blur_behaviour.": "Control window blur behaviour.",
-    "Solution_to_load_the_cursor_(rainbow_circle)": "Solution to load the cursor (rainbow circle)",
+    "Solution_to_load_the_cursor_(rainbow_circle)": "Solution to load cursor (rainbow circle)",
     "If_the_Beta_menu_bar_is_activated,the_menu_bar_color_will_be_dynamic_as_needed": "If the Beta menu bar is activated, the menu bar\ncolor will be dynamic as needed change.",
     "Logout_is_required_to_apply_changes_to_SkyLight": "Logout is required to apply changes to SkyLight.",
     "Downloading:": "Downloading:",
